--- a/house_prices/ml_rg_r.ipynb
+++ b/house_prices/ml_rg_r.ipynb
@@ -468,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -482,11 +482,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5cca191742bef07b6971a46565a98ec33a3b24c50accfd3f13c93f072963e193"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
